bk_ida/sjengida/g3/init_game
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/init_game/src/utils.c:836:23: error: use of undeclared identifier 'unk_428440'
qmemcpy( init_board, &unk_428440, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/init_game/src/obj/utils.o] Error 1
